--- a/src/app/views/products/product/card.component.html
+++ b/src/app/views/products/product/card.component.html
@@ -1,5 +1,5 @@
 <section class="single-product-section">
-  <div class="container">
+  <div class="container vh-100">
     <div class="row">
       <div class="col-lg-7 col-md-12">
         <div>
