--- a/src/app/views/main/home/home.component.html
+++ b/src/app/views/main/home/home.component.html
@@ -17,17 +17,17 @@
 <ngb-carousel class="container mt-5 ">>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img src="../../../../assets/images/chay-s-apelsinom-sayt-2%201.png" alt="Random first slide"/>
+      <img src="assets/images/chay-s-apelsinom-sayt-2%201.png" alt="Random first slide"/>
     </div>
   </ng-template>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img src="../../../../assets/images/Баннер2.png" alt="Random second slide"/>
+      <img src="assets/images/Баннер2.png" alt="Random second slide"/>
     </div>
   </ng-template>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img src="../../../../assets/images/Баннер3.png" alt="Random third slide"/>
+      <img src="assets/images/Баннер3.png" alt="Random third slide"/>
     </div>
   </ng-template>
 </ngb-carousel>
